Defects/Add Defects \n\n Added form to create defects. UI is correct, though would like to align right -properly.

--- a/static/css/all.less
+++ b/static/css/all.less
@@ -70,7 +70,7 @@
 .sevq { color: #77AAFF; }
 h2.bucket span.arrow { font-size: .6em; padding-right: 10px; }
 h2.bucket span.sevcount { background: #EAEAEA; padding: 10px; margin-right: 10px; }
-h1.title span.sevcount { background: #EAEAEA; padding: 10px; margin-right: 10px; }
+h2.title span.sevcount { background: #EAEAEA; padding: 10px; margin-right: 10px; }
 
 form.time-form{
   border: 1px solid #ccc;
